
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int _ismbcdigit( unsigned int c )
{
 return ((c) >= 0x824f && (c) <= 0x8258);
}
